--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Add Something here!</p>
-  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem id omnis, commodi repudiandae inventore corrupti saepe dignissimos voluptate ipsum magnam, accusantium corporis officiis quaerat amet, expedita consequatur eum exercitationem autem.</p>
+  <p>Modified this line</p>
+  <p>Added One line here</p>
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
